--- a/02_Lab.ipynb
+++ b/02_Lab.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "02_Lab.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOOB/ORRUME4ezEExdAvsSM"
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
